<resources>
    <string name="app_name">My application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextView">Here are my widgets:</string>
    <string name="Botton">Botton</string>
    <string name="Switch">Switch on/off</string>
    <string name="HintText">Type your name in here</string>
    <string name="checkBoxText">Check this out</string>
    <string name="emailAddress">Enter your email address</string>
    <string name="enterEmailAddress">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="bottonlab3">Login</string>
    <string name="profile">Your profile</string>
    <string name="profileName">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="textBotton">Click the button above to take a picture</string>
    <string name="sharedEmail"></string>
    <string name="btnGotoChat">GO TO CHAT</string>
    <string name="btnSend">SEND</string>
    <string name="btnReceive">RECEIVE</string>
    <string name="editText">Type here</string>



</resources>