<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/TextView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_toEndOf="@id/imageButton3"
        android:text="@string/Botton" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignParentRight="true"
         />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton3"
        android:layout_alignParentLeft="true"
        android:text="@string/checkBoxText"/>

    <Switch
        android:id="@+id/switch3"
        android:layout_width="216dp"
        android:layout_height="11dp"
        android:layout_below="@id/imageButton3"
        android:layout_alignParentRight="true"
        android:layout_toStartOf="@id/checkBox3"
        android:text="@string/Switch"

        />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox3"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/HintText"
        android:inputType="textPersonName" />
</RelativeLayout>